# arbitrage_engine

./: CMakeLists.txt  README.md
config/: config.yaml
src/: main.cpp
src/config/: Config.cpp  Config.hpp
src/core/: BookSnapshot.hpp  BookUpdate.hpp  Exchange.hpp  OrderBook.cpp  OrderBook.hpp  PriceLevel.hpp
src/engine/: ArbitrageEngine.cpp  ArbitrageEngine.hpp
src/exchanges/: BinanceDepthParser.cpp  BinanceDepthParser.hpp  BinanceLocalBookManager.cpp  BinanceLocalBookManager.hpp  BinanceSnapshotParser.cpp  BinanceSnapshotParser.hpp  MexcDepthParser.cpp  MexcDepthParser.hpp  MexcLocalBookManager.cpp  MexcLocalBookManager.hpp  MexcSnapshotParser.cpp  MexcSnapshotParser.hpp
src/market/: MarketDataStore.cpp  MarketDataStore.hpp
src/net/: HttpsClient.cpp  HttpsClient.hpp  HttpsEndpoint.hpp  WebSocketClient.cpp  WebSocketClient.hpp  WsEndpoint.hpp
src/planner/: SubscriptionPlanner.cpp  SubscriptionPlanner.hpp
src/util/: Time.hpp
tests/: test_arbitrage_engine.cpp  test_binance_depth_parser.cpp  test_binance_local_book_manager.cpp  test_binance_snapshot_parser.cpp  test_market_data_store.cpp  test_mexc_depth_parser.cpp  test_mexc_local_book_manager.cpp  test_mexc_snapshot_parser.cpp  test_order_book.cpp  test_subscription_planner.cpp
